# arcade-azure-devops-mcp

./: .env.example  README.md  pyproject.toml  server.py
arcade_azure_devops_mcp/: __init__.py  client.py  models.py
arcade_azure_devops_mcp/auth/: __init__.py  manager.py  oauth.py
