[project]
name = "arcade-azure-devops-mcp"
version = "0.1.0"
description = "Azure DevOps MCP Server - Interact with Azure DevOps from AI assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "msal>=1.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcade_azure_devops_mcp"]
